# zhaoserver

./: Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml
.cargo/: config.toml
db/: init.sql
src/: main.rs
zserver/: .env  Cargo.toml  Dockerfile
zserver/examples/: gen_key.rs  quick_devs.rs
zserver/sql/dev_initial/: 01-create-schema.sql
zserver/src/: config.rs  log.rs  main.rs  model.rs
zserver/src/_dev_utils/: dev_db.rs  mod.rs
zserver/src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
zserver/src/log/: mod.rs
zserver/src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
zserver/src/model/store/: error.rs  mod.rs
zserver/src/utils/: error.rs  mod.rs
zserver/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
zserver/tests/: quick_devs.rs
