[package]
name = "zhaoserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["full"] }